--- a/abaGui/index.html
+++ b/abaGui/index.html
@@ -1,4 +1,17 @@
-<doctype-html>
-	<html>
-		<tittle>oi</tittle>
-	</html>
+<!DOCTYPE html>
+<html>
+	<head>
+		<tittle>alguma pagina</tittle>
+		<h1>definitivamente alguma pagina</h1>
+		<meta charset="UTP-8">
+		<link rel="stylesheet" href="style.css">
+	</head>
+
+	<body>
+		<div class="sim">
+			<h1>alguma coisa</h1>
+			<p>alguma outra coisa</p>
+		</div>
+	</body>
+
+</html>
