seila, só estou tentanto fazer isso funcionar a uns 10 minutos

--- a/abaGui2/abaGui.html
+++ b/abaGui2/abaGui.html
@@ -4,7 +4,7 @@
 		<tittle>alguma pagina</tittle>
 		<h1>definitivamente alguma pagina</h1>
 		<meta charset="UTP-8">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="abaGui.css">
 	</head>
 
 	<body>
@@ -13,5 +13,7 @@
 			<p>alguma outra coisa</p>
 		</div>
 	</body>
+
+	<script src="abaGui.js"></script>
 
 </html>
