--- a/abaGui2/abaGui.html
+++ b/abaGui2/abaGui.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<tittle>alguma pagina</tittle>
-		<h1>definitivamente alguma pagina</h1>
+		<tittle>pagina de objetivos/comunidades</tittle>
+		<h1></h1>
 		<meta charset="UTP-8">
 		<link rel="stylesheet" href="abaGui.css">
 	</head>
 
 	<body>
-		<div class="sim">
-			<h1>alguma coisa</h1>
-			<p>alguma outra coisa</p>
+		<div class="titulo">
+			<h1>Objetivos</h1>
+			<input id="novoObjetivo" placeholder="novo objetivo"></br>
+			<button id="salvarObjetivo">salvar</button>
+		</div>
+
+		<div class="comunidades">
+			<h1>Comunidades</h1>
+			<button id="comunidade1">c1</button>
+			<button id="comunidade2">c2</button>
 		</div>
 	</body>
 
