--- a/abaGui2/abaGui.html
+++ b/abaGui2/abaGui.html
@@ -3,7 +3,7 @@
 	<head>
 		<tittle>pagina de objetivos/comunidades</tittle>
 		<h1></h1>
-		<meta charset="UTP-8">
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="abaGui.css">
 	</head>
 
@@ -12,6 +12,7 @@
 			<h1>Objetivos</h1>
 			<input id="novoObjetivo" placeholder="novo objetivo"></br>
 			<button id="salvarObjetivo">salvar</button>
+			<ul id="listaObjetivos"></ul>
 		</div>
 
 		<div class="comunidades">
